...

    const animatedStyle = useAnimatedStyle(() => ({
        height: chatHeight.value,
    }));

    return (
        <GestureHandlerRootView testID="map_screen" style={{ flex: 1, backgroundColor: '#09090B' }}>
            <MapView
                ref={mapRef}
                style={{ flex: 1 }}
                provider={process.env.EXPO_OS === 'android' ? PROVIDER_GOOGLE : undefined}
                customMapStyle={naverMapStyle}
                initialRegion={{
...
